--- a/final_project/About.html
+++ b/final_project/About.html
@@ -100,6 +100,7 @@
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-instagram"></i></a>
   <p class="w3-medium">
     <a href="Final.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
   </p>
