--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -50,7 +50,7 @@
 
 <!-- Search... Bar  -->
 <head>
-  <div class="container">
+
 <style>
 input[type=text] {
     width: 100%;
@@ -80,7 +80,7 @@ input[type=text]:focus {
 
 
 <!-- Change every 3 seconds (Bootstrap Carousel)-->
-<div class="container">
+
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -112,7 +112,7 @@ input[type=text]:focus {
         <span class="sr-only">Next</span>
       </a>
     </div>
-  </div>
+
 
 
 
@@ -166,6 +166,7 @@ input[type=text]:focus {
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-instagram"></i></a>
   <p class="w3-medium">
     <a href="Final.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
   </p>
