--- a/final_project/Rap.html
+++ b/final_project/Rap.html
@@ -49,7 +49,6 @@
 
   <!-- Search... Bar  -->
   <head>
-    <div class="container">
   <style>
   input[type=text] {
       width: 100%;
@@ -74,7 +73,7 @@
   <form>
     <input type="text" name="search" placeholder="Search..">
   </form>
-  </div>
+
 
 
 
@@ -178,6 +177,7 @@
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-instagram"></i></a>
   <p class="w3-medium">
     <a href="Final.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
   </p>
