--- a/final_project/About.html
+++ b/final_project/About.html
@@ -37,7 +37,7 @@
 
    <!-- Home Bar  -->
 <nav class="w3-bar w3-yellow">
-    <a href="Final.html" class="w3-button w3-bar-item">Home</a>
+    <a href="index.html" class="w3-button w3-bar-item">Home</a>
     <a href="Pop.html" class="w3-button w3-bar-item">Pop</a>
     <a href="Rap.html" class="w3-button w3-bar-item">Rap</a>
     <a href="About.html" class="w3-button w3-bar-item">About</a>
@@ -102,7 +102,7 @@
   <a href="#"><i class="fa fa-linkedin"></i></a>
   <a href="#"><i class="fa fa-instagram"></i></a>
   <p class="w3-medium">
-    <a href="Final.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
+    <a href="index.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
   </p>
     <p class="w3-medium">
       Copyright © 2017 Sy Loc. All Rights Reserved | <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
