--- a/final_project/Pop.html
+++ b/final_project/Pop.html
@@ -121,6 +121,7 @@
     <div class="col-md-10">
       <h2 class="featurette-heading">Pop Music in 2017<span class="text-muted">New</span></h2>
     </div>
+        <center>
           <div class="row">
             <div class="container">
               <a><iframe width="280px" height="50%" src="https://www.youtube.com/embed/-u9bCZAOYpI" frameborder="0" allowfullscreen></iframe></a>
@@ -165,7 +166,7 @@
     <iframe width="280px" height="50%" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-
+</center>
 
 
 
