--- a/final_project/Rap.html
+++ b/final_project/Rap.html
@@ -115,6 +115,7 @@
 
 
 <!-- Picture with text and Video Lac Troi-->
+<center>
 <div>
 <hr class="featurette-divider">
 <div class="container">
@@ -122,69 +123,71 @@
       <h2 class="featurette-heading">Rap Music in 2017<span class="text-muted">New</span></h2>
     </div>
           <div class="row">
-            <div class="container">
-              <iframe width="280px" height="50%" src="https://www.youtube.com/embed/xqY59FOcUy8" frameborder="0" allowfullscreen></iframe>
-              <iframe width="280px" height="50%" src="https://www.youtube.com/embed/D-6JDufCJ1Y" frameborder="0" allowfullscreen></iframe>
-              <iframe width="280px" height="50%" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
-              <iframe width="280px" height="50%" src="https://www.youtube.com/embed/XyMJkvG3rM0" frameborder="0" allowfullscreen></iframe>
-              </div>
+              <div class="container">
+              <iframe width="200px" height="120px" src="https://www.youtube.com/embed/xqY59FOcUy8" frameborder="0" allowfullscreen></iframe>
+              <iframe width="200px" height="120px" src="https://www.youtube.com/embed/D-6JDufCJ1Y" frameborder="0" allowfullscreen></iframe>
+              <iframe width="200px" height="120px" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
+              <iframe width="200px" height="120px" src="https://www.youtube.com/embed/XyMJkvG3rM0" frameborder="0" allowfullscreen></iframe>
+
           </div>
 </div>
 
 
 
 <hr class="featurette-divider">
-<div class="row">
-  <div class="container">
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/aqgZDhhksa4" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/gq7hMQOC1QQ" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/T_xovLIHU40" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/v4peazIZprY" frameborder="0" allowfullscreen></iframe>
-</div>
-</div>
+  <div class="row">
+    <div class="container">
+      <iframe width="200px" height="50%" src="https://www.youtube.com/embed/aqgZDhhksa4" frameborder="0" allowfullscreen></iframe>
+      <iframe width="200px" height="50%" src="https://www.youtube.com/embed/gq7hMQOC1QQ" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/T_xovLIHU40" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/v4peazIZprY" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
 
 
 
 <hr class="featurette-divider">
-<div class="row">
-  <div class="container">
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/gW_As8jQmEM" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/16B8btfN77Y" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/XBVYnIddiVQ" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/HqTe2T-RChE" frameborder="0" allowfullscreen></iframe>
-</div>
-</div>
+  <div class="row">
+    <div class="container">
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/gW_As8jQmEM" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/16B8btfN77Y" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/XBVYnIddiVQ" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/HqTe2T-RChE" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
 
 
 
 <hr class="featurette-divider">
-<div class="row">
-  <div class="container">
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/x2_zDpS2Ftg" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/bBb4lm477iE" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/Qg52au6_Low" frameborder="0" allowfullscreen></iframe>
-  <iframe width="280px" height="50%" src="https://www.youtube.com/embed/IKtC5v5Lybk" frameborder="0" allowfullscreen></iframe>
+  <div class="row">
+    <div class="container">
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/x2_zDpS2Ftg" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/bBb4lm477iE" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/Qg52au6_Low" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280px" height="50%" src="https://www.youtube.com/embed/IKtC5v5Lybk" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
 </div>
-</div>
+</center>
 
 
 
 <hr class="featurette-divider">
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-yellow w3-xlarge">
-  <a href="#"><i class="fa fa-facebook-official"></i></a>
-  <a href="#"><i class="fa fa-pinterest-p"></i></a>
-  <a href="#"><i class="fa fa-twitter"></i></a>
-  <a href="#"><i class="fa fa-flickr"></i></a>
-  <a href="#"><i class="fa fa-linkedin"></i></a>
-  <a href="#"><i class="fa fa-instagram"></i></a>
-  <p class="w3-medium">
-    <a href="index.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
-  </p>
-    <p class="w3-medium">
-      Copyright © 2017 Sy Loc. All Rights Reserved | <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
-    </p>
-</footer>
+  <footer class="w3-container w3-padding-64 w3-center w3-yellow w3-xlarge">
+    <a href="#"><i class="fa fa-facebook-official"></i></a>
+    <a href="#"><i class="fa fa-pinterest-p"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-flickr"></i></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fa fa-instagram"></i></a>
+      <p class="w3-medium">
+        <a href="index.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
+      </p>
+        <p class="w3-medium">
+          Copyright © 2017 Sy Loc. All Rights Reserved | <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
+        </p>
+  </footer>
 
 </body>
 </html>
