--- a/final_project/index.html
+++ b/final_project/index.html
@@ -34,7 +34,7 @@
       </div>
 
      <!-- Home Bar  -->
-  <nav class="w3-bar w3-yellow">
+  <nav class="w3-bar w3-green">
     <ul class="nav navbar-nav">
       <li><a href="index.html" class="w3-button">Home</a></li>
       <li><a href="Pop.html" class="w3-button">Pop</a></li>
@@ -53,14 +53,12 @@
             </div>
           </form>
 
+
       <!-- Menu Icon button and working here -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation" style="float:right;" class="nav navbar-nav navbar-right" class="btn btn-danger navbar-btn">
-          <span style="font-size:22px; cursor:pointer; " onclick="openNav() ">&#x2630; </span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" style="float:right;" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation" class="nav navbar-nav navbar-right" class="btn btn-danger navbar-btn">
+          <span style="font-size:31px; cursor:pointer;" onclick="openNav()"><i class="glyphicon glyphicon-menu-hamburger"></i> </span>
         </button>
-
-
   </nav>
-
 
 
 
@@ -72,6 +70,7 @@
             </button>
           </div>
         </div>
+
 
 
 
