--- a/final_project/index.html
+++ b/final_project/index.html
@@ -34,14 +34,18 @@
       </div>
 
      <!-- Home Bar  -->
-  <nav class="w3-bar w3-green">
+  <nav class="w3-bar w3-yellow">
+    <!-- Menu Icon button and working here -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" style="float:left;" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation" class="nav navbar-nav navbar-right" class="btn btn-danger navbar-btn">
+      <span style="color:#ff0000; font-size:31px; cursor:pointer;" onclick="openNav()">&#x2630; </span>
+    </button>
+
     <ul class="nav navbar-nav">
       <li><a href="index.html" class="w3-button">Home</a></li>
       <li><a href="Pop.html" class="w3-button">Pop</a></li>
       <li><a href="Rap.html" class="w3-button">Rap</a></li>
       <li><a href="About.html" class="w3-button">About</a></li>
     </ul>
-
       <form class="navbar-form navbar-left ">
             <div class="input-group" >
               <input type="text" class="form-control" placeholder="Search">
@@ -52,12 +56,6 @@
               </div>
             </div>
           </form>
-
-
-      <!-- Menu Icon button and working here -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" style="float:right;" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation" class="nav navbar-nav navbar-right" class="btn btn-danger navbar-btn">
-          <span style="font-size:31px; cursor:pointer;" onclick="openNav()"><i class="glyphicon glyphicon-menu-hamburger"></i> </span>
-        </button>
   </nav>
 
 
